# nuri

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  app.config.json  vcpkg.json
app/: CMakeLists.txt  main.cpp
app/src/: main.cpp
assets/shaders/: BRDF.sp  brdf_lut.comp  common.sp  duck_instances.comp  envmap_prefilter.comp  grid.frag  grid.vert  grid_calculation.sp  grid_params.sp  main.frag  main.tesc  main.tese  main.vert  main_id.frag  main_id_alpha.frag  main_tess.vert  mesh_debug_overlay.frag  mesh_debug_overlay.geom  sheen.sp  skybox.frag  skybox.vert  text_2d_mtsdf.frag  text_2d_mtsdf.vert  text_3d_mtsdf.frag  text_3d_mtsdf.vert
assets/textures/: brdf_lut.ktx2  immenstadter_horn_2k_irradiance.ktx2  piazza_bologni_1k_irradiance.ktx2
editor/: CMakeLists.txt
editor/include/nuri/bakery/: bakery_system.h  bakery_types.h  brdf_lut_baker.h  envmap_prefilter_baker.h
editor/include/nuri/gfx/: imgui_gpu_renderer.h
editor/include/nuri/platform/: imgui_glfw_platform.h
editor/include/nuri/ui/: camera_controller_widget.h  editor.h  editor_layer.h  editor_services.h  file_dialog_widget.h  imgui_editor.h  imgui_gizmo_controller.h  linear_graph.h
editor/src/: main.cpp
editor/src/bakery/: bakery_system.cpp  brdf_lut_baker.cpp  envmap_prefilter_baker.cpp
editor/src/gfx/: imgui_gpu_renderer.cpp
editor/src/platform/: imgui_glfw_platform.cpp
editor/src/resources/storage/font/: nfont_compiler.cpp
editor/src/ui/: camera_controller_widget.cpp  editor_layer.cpp  imgui_editor.cpp  imgui_gizmo_controller.cpp  linear_graph.cpp
editor/src/ui/platform/: file_dialog_widget_windows.cpp
lib/: CMakeLists.txt
lib/nuri/: application.cpp  application.h  defines.h  nuri.cpp  nuri.h  pch.h  result.h  shader.cpp  shader.h
lib/nuri/bakery/: bakery_system.cpp  bakery_system.h  brdf_lut_baker.cpp  brdf_lut_baker.h  envmap_prefilter_baker.cpp  envmap_prefilter_baker.h
lib/nuri/core/: application.cpp  application.h  event_manager.cpp  event_manager.h  input_codes.h  input_events.h  input_system.cpp  input_system.h  layer.h  layer_stack.cpp  layer_stack.h  log.cpp  log.h  pmr_scratch.h  profiling.h  result.h  runtime_config.cpp  runtime_config.h  window.h
lib/nuri/core/containers/: hash_map.h  hash_set.h
lib/nuri/gfx/: debug_draw_3d.cpp  debug_draw_3d.h  gpu_descriptors.h  gpu_device.h  gpu_render_types.h  gpu_types.h  imgui_gpu_renderer.cpp  imgui_gpu_renderer.h  pipeline.h  renderer.cpp  renderer.h  shader.cpp  shader.h
lib/nuri/gfx/layers/: debug_layer.cpp  debug_layer.h  opaque_layer.cpp  opaque_layer.h  render_frame_context.h  skybox_layer.cpp  skybox_layer.h  transparent_layer.cpp  transparent_layer.h
lib/nuri/gfx/render_graph/: render_graph.cpp  render_graph.h  render_graph_runtime.cpp  render_graph_runtime.h  render_graph_telemetry.cpp  render_graph_telemetry.h
lib/nuri/math/: types.h
lib/nuri/platform/: glfw_window.cpp  glfw_window.h  gpu_descriptors.h  gpu_device.cpp  gpu_device.h  gpu_render_types.h  gpu_types.h  imgui_glfw_platform.cpp  imgui_glfw_platform.h  lvk_gpu_device.cpp  lvk_gpu_device.h  minilog_log.cpp  minilog_log.h
lib/nuri/resources/: mesh_importer.h  mesh_importer_assimp.cpp
lib/nuri/resources/cpu/: bitmap.h  material_data.h  mesh_data.h
lib/nuri/resources/gpu/: buffer.h  geometry_pool.cpp  geometry_pool.h  material.cpp  material.h  model.cpp  model.h  resource_handles.h  resource_keys.h  resource_manager.cpp  resource_manager.h  texture.cpp  texture.h
lib/nuri/resources/storage/font/: nfont_binary_codec.cpp  nfont_binary_codec.h  nfont_binary_format.h  nfont_compiler.cpp  nfont_compiler.h
lib/nuri/resources/storage/mesh/: mesh_binary_codec.cpp  mesh_binary_codec.h  mesh_binary_format.h  mesh_binary_serializer.cpp  mesh_binary_serializer.h  mesh_cache_utils.cpp  mesh_cache_utils.h  mesh_cache_writer.cpp  mesh_cache_writer.h
lib/nuri/scene/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  camera_system.cpp  camera_system.h  render_scene.cpp  render_scene.h
lib/nuri/text/: font_manager.h  font_types.h  text_layer_2d.h  text_layer_3d.h  text_layouter.h  text_renderer.h  text_shaper.h  text_system.h
lib/nuri/text/detail/: font_manager.cpp  text_layer_2d.cpp  text_layer_3d.cpp  text_layouter.cpp  text_renderer.cpp  text_shaper.cpp  text_system.cpp
lib/nuri/ui/: camera_controller_widget.cpp  camera_controller_widget.h  editor.h  editor_layer.cpp  editor_layer.h  editor_services.h  file_dialog_widget.h  imgui_editor.cpp  imgui_editor.h  imgui_gizmo_controller.cpp  imgui_gizmo_controller.h  linear_graph.cpp  linear_graph.h
lib/nuri/ui/platform/: file_dialog_widget_windows.cpp
lib/nuri/utils/: FPSCounter.cpp  env_utils.cpp  env_utils.h  fsp_counter.cpp  fsp_counter.h
scripts/: _nuri_build.bat  _nuri_build.sh  _nuri_exec.bat  _nuri_exec.sh  bootstrap_lightweightvk.bat  bootstrap_lightweightvk.sh  build_app.bat  build_app.sh  build_debug.bat  build_debug.sh  build_editor.bat  build_editor.sh  build_lib.bat  build_lib.sh  build_release.bat  build_release.sh  build_tests.bat  build_tests.sh  lvk-deps.txt  run_app.bat  run_app.sh  run_debug.bat  run_debug_editor.bat  run_editor.bat  run_editor.sh  run_tests.bat  run_tests.sh
tests/: CMakeLists.txt
tests/include/: render_graph_test_support.h  tests_pch.h
tests/src/: material_import_tests.cpp  render_graph_compile_behavior_tests.cpp  render_graph_executor_tests.cpp  render_graph_metadata_tests.cpp  render_graph_renderer_tests.cpp  render_graph_telemetry_tests.cpp  render_graph_test_support.cpp  render_graph_test_support.h
